feat: simplify resources organization and capacities
